# 0x6g-textay

./: README.md  com.x1da49.textay.json  meson.build
data/: com.x1da49.textay.desktop.in  com.x1da49.textay.gschema.xml  com.x1da49.textay.metainfo.xml.in  com.x1da49.textay.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: editor.py  main.py  meson.build  preferences.py  textay.gresource.xml  textay.in  window.py  window.ui  workspace.py
